--- a/HTML/main.css
+++ b/HTML/main.css
@@ -1,16 +1,21 @@
+
+
+
+
 body {
     display: block;
     background-color:white;
     border: none;
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Exo', sans-serif;
+    font-style: normal;
 }
 
 .content {
     width: 70%;
-    height: 90%;
     margin: auto;
+    padding: 80px 60px;
 }
 .top {
     margin: auto;
@@ -18,22 +23,28 @@ body {
 }
 
 .logo {
-    width: 60px;
-    height: 25px;    
+    width: 50px;
+    height: 20px;    
     background-color: black;
-    color: gray;
-    padding: 20px 60px 40px 10px;
-    font-size: 40px;
+    color: white;
+    padding: 30px 30px 40px 10px;
+    font-size: 20px;
     margin: 0px auto;
+    font-weight: bold;
+    letter-spacing: 5px;
 }
 
 .heading_1 {
-    font-size: xx-large;  
+    font-size: x-large;  
     margin-top: auto;
+    
 } 
+h1 {
+    font-weight: normal;
+}
 
 .items {
-    font-size: large;
+    font-size: small;
     margin: 0 60px;
 }
 
@@ -58,11 +69,16 @@ input {
 }
 
 .phone_container {
-    width: 100%;
     display: flex;
 }
 .phone:first-child {
     flex: 0;
+    padding: 10px 0px 25px;
+}
+
+select {
+    padding: 15px;
+    font-size: large;
 }
 
 .phone:last-child {
@@ -74,6 +90,7 @@ input[type=submit] {
     border: none;
     color: white;
     cursor: pointer;
+    padding: 20px 335px 20px 200px;
 }
 
 input[type=submit]:hover {
@@ -81,7 +98,7 @@ input[type=submit]:hover {
 }
 
 .bottom {
-    font-size: 15px;
+    font-size: 14px;
 }
 
 a {
@@ -89,7 +106,11 @@ a {
     color: rgb(0, 119, 255)
 }
 
-@media only screen and (max-width: 992px) {
+.bottom > p {
+    font-size: 12px;
+}
+
+/* @media only screen and (max-width: 992px) {
         width: 100%;
     }
 
@@ -98,8 +119,7 @@ a {
         
     }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) { */
 
-}
 
 /* test */
